unpackaged/main/default/objects/Case/fields/Acc_Tier__c.field-meta.xml
<CustomField>
    <fullName>Acc_Tier__c</fullName>
    <formula>CASE(Account.Tier__c,
&quot;None&quot;,&quot;&quot;,
&quot;Premium&quot;,&quot;Premium&quot;,
&quot;Standard&quot;,&quot;Standard&quot;,
&quot;Prime&quot;,&quot;Prime&quot;,
&quot;Basic&quot;,&quot;Basic&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier N</label>
    <type>Text</type>
</CustomField>