unpackaged/main/default/objects/Case/fields/Account_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Account_ID__c</fullName>
    <formula>Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account: Account ID</label>
    <type>Text</type>
</CustomField>