unpackaged/main/default/objects/Case/fields/Account_Edition__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition__c</fullName>
    <label>Account Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>