unpackaged/main/default/objects/Case/fields/Account_Edition_Setup__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition_Setup__c</fullName>
    <description>It shows the Edition Setup in the Case Account Section</description>
    <formula>TEXT(Account.Edition_Setup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Edition Setup</label>
    <type>Text</type>
</CustomField>