unpackaged/main/default/objects/Case/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>This is the account ID that is dynamically pulled from the Report This form</description>
    <label>BCAccount ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>