unpackaged/main/default/objects/Case/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>