unpackaged/main/default/objects/Case/fields/Assisted_by__c.field-meta.xml
<CustomField>
    <fullName>Assisted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assisted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesAssistedBy</relationshipName>
    <type>Lookup</type>
</CustomField>