unpackaged/main/default/objects/Case/fields/Avg_Response_Time_NEW__c.field-meta.xml
<CustomField>
    <fullName>Avg_Response_Time_NEW__c</fullName>
    <formula>/*Return a value only when an email has been sent*/
IF( 
 CONTAINS(TEXT(Status), &quot;Pending - Customer&quot;) , (( Last_Email_Sent__c - Last_Email_Received__c )*24*60), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Response Time (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>