unpackaged/main/default/objects/Case/fields/BC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>BC_Account_Id__c</fullName>
    <label>Brightcove Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>