unpackaged/main/default/objects/Case/fields/BC_Case_Reason_Glossary__c.field-meta.xml
<CustomField>
    <fullName>BC_Case_Reason_Glossary__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/113yo-RWrlAuILrZYj-IHBfNcOKsIHQdZC_fXhJU8TEE/edit#gid=1521020600&quot;,&quot;Click to open Glossary spreadsheet&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC Case Reason Glossary</label>
    <type>Text</type>
</CustomField>