unpackaged/main/default/objects/Case/fields/Case_Cost_New__c.field-meta.xml
<CustomField>
    <fullName>Case_Cost_New__c</fullName>
    <description>New Case field to monitor the cost of cases</description>
    <label>Case Cost (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>