unpackaged/main/default/objects/Case/fields/Case_Owner_During_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_During_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner When Escalated</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.CS_Role__c</field>
            <operation>equals</operation>
            <value>CSR, Tier 1, Tier 2 Production, Tier 2 Development, Manager, Tier 3, NOC, Manager NOC</value>
        </filterItems>
        <filterItems>
            <field>$User.Email</field>
            <operation>equals</operation>
            <value>gamati@brightcove.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>