unpackaged/main/default/objects/Case/fields/Case_Owner_During_Escalation_Region__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_During_Escalation_Region__c</fullName>
    <formula>TEXT( Case_Owner_During_Escalation__r.CS_Region__c )</formula>
    <label>Case Owner When Escalated Region</label>
    <type>Text</type>
</CustomField>