unpackaged/main/default/objects/Case/fields/Case_Owner_full_name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_full_name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner full name</label>
    <type>Text</type>
</CustomField>