unpackaged/main/default/objects/Case/fields/Case_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Manager</label>
    <type>Text</type>
</CustomField>