unpackaged/main/default/objects/Case/fields/Case_Owner_Position__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Position__c</fullName>
    <description>This field tells if the owner is T1, T2.</description>
    <formula>TEXT(  Owner:User.CS_Role__c  )</formula>
    <label>Case Owner TS Role</label>
    <type>Text</type>
</CustomField>