unpackaged/main/default/objects/Case/fields/Case_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Region__c</fullName>
    <formula>TEXT(Owner:User.CS_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Region</label>
    <type>Text</type>
</CustomField>