unpackaged/main/default/objects/Case/fields/Case_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Role__c</fullName>
    <formula>TEXT(Owner:User.CS_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Role</label>
    <type>Text</type>
</CustomField>