unpackaged/main/default/objects/Case/fields/Case_Owner_When_Escalated_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_When_Escalated_Role__c</fullName>
    <description>Tier of the case owner when escalation was created</description>
    <formula>TEXT(Case_Owner_During_Escalation__r.CS_Role__c)</formula>
    <label>Case Owner When Escalated: Role</label>
    <type>Text</type>
</CustomField>