unpackaged/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Used to display limited case statuses to support center users</description>
    <formula>IF(TEXT(Status) = &#39;New&#39;, $Label.Community_Case_Status_New, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Internal&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Customer&#39;, $Label.Community_Case_Status_Awaiting_your_response, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Customer - Need More Info&#39;, $Label.Community_Case_Status_Awaiting_your_response, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Customer - Info Provided&#39;, $Label.Community_Case_Status_Awaiting_your_response, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Customer - Need More Info - 8&#39;, $Label.Community_Case_Status_Awaiting_your_response, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Customer - Need Info provided - 8&#39;, $Label.Community_Case_Status_Awaiting_your_response, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Fix&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Fix Review&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - System Issue&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - CSM/Sales&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - ENG Task&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - 3rd Party&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending - Product Enhancement&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Customer has replied&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed&#39;, $Label.Community_Case_Status_Closed, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed - First Response&#39;, $Label.Community_Case_Status_Closed, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed - Unresolved&#39;, $Label.Community_Case_Status_Closed, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed as Duplicate&#39;, $Label.Community_Case_Status_Closed, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed - First Response&#39;, $Label.Community_Case_Status_Closed_Awaiting, &#39;&#39;) +
IF(TEXT(Status) = &#39;Closed - Customer Has Replied&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Need To Close&#39;, $Label.Community_Case_Status_Resolved, &#39;&#39;) +
IF(TEXT(Status) = &#39;Pending&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;) +
IF(TEXT(Status) = &#39;Resolved&#39;, $Label.Community_Case_Status_In_Progress, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>