unpackaged/main/default/objects/Case/fields/Case_Summary_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Summary Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Updated_Summary_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>