unpackaged/main/default/objects/Case/fields/Case_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Title__c</fullName>
    <formula>HYPERLINK(&#39;/lightning/r/Case/&#39;+ Id+&#39;/view&#39;,  Title__c , &quot;_parent&quot;)</formula>
    <label>Case Title</label>
    <type>Text</type>
</CustomField>