unpackaged/main/default/objects/Case/fields/CaseThreadId__c.field-meta.xml
<CustomField>
    <fullName>CaseThreadId__c</fullName>
    <formula>&quot;ref:&quot;&amp;LEFT( $Organization.Id , 4 )&amp;RIGHT( $Organization.Id , 3 )&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp;RIGHT( Id , 5 )&amp;&quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>