unpackaged/main/default/objects/Case/fields/Change_Ownership_Override__c.field-meta.xml
<CustomField>
    <fullName>Change_Ownership_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Ownership Override</label>
    <type>Checkbox</type>
</CustomField>