unpackaged/main/default/objects/Case/fields/Closed_Case_Email_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Closed_Case_Email_To_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked sends a closed case email to the case contact. (Sales Ops Cases)</description>
    <inlineHelpText>If checked sends a closed case email to the case contact. (Sales Ops Cases)</inlineHelpText>
    <label>Closed Case Email To Contact?</label>
    <type>Checkbox</type>
</CustomField>