unpackaged/main/default/objects/Case/fields/Closed_While_T1__c.field-meta.xml
<CustomField>
    <fullName>Closed_While_T1__c</fullName>
    <formula>IF( Closed_While_T2_Dev__c = TRUE,FALSE,IF( Closed_While_T2_Prod__c  = TRUE,FALSE,DATEVALUE( ClosedDate ) &gt;  Owner:User.Date_Made_Tier_1__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed While T1</label>
    <type>Checkbox</type>
</CustomField>