unpackaged/main/default/objects/Case/fields/ClosedDate_Match_LegacyClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate_Match_LegacyClosedDate__c</fullName>
    <formula>ClosedDate = Legacy_Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClosedDate Match LegacyClosedDate</label>
    <type>Checkbox</type>
</CustomField>