unpackaged/main/default/objects/Case/fields/Coaching_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Notes__c</fullName>
    <description>Details on what the feedback was about</description>
    <label>Coaching Opportunity Notes</label>
    <type>TextArea</type>
</CustomField>