unpackaged/main/default/objects/Case/fields/CoacingNotesRecords__c.field-meta.xml
<CustomField>
    <fullName>CoacingNotesRecords__c</fullName>
    <description>It counts the number of coaching notes record under one account</description>
    <label>CoacingNotesRecords</label>
    <summaryForeignKey>Coaching_Notes__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>