unpackaged/main/default/objects/Case/fields/Communication_Channels__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channels__c</fullName>
    <inlineHelpText>Pick up the ones used to communicate with the customer/case contact. Internal chats with engineering, TS, etc. shouldn&#39;t be considered.</inlineHelpText>
    <label>Communication Channels (external)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Go To Meeting</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Google Meet</fullName>
            </value>
            <value>
                <fullName>Brightcove Video</fullName>
            </value>
            <value>
                <fullName>Go to Assist</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>Email/Case Comments</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Video/Phone Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>