unpackaged/main/default/objects/Case/fields/Communication_Channels_external__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channels_external__c</fullName>
    <label>Communication Channels (external)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Go To Meeting</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Google Meet</fullName>
            </value>
            <value>
                <fullName>Brightcove Video</fullName>
            </value>
            <value>
                <fullName>Go to Assist</fullName>
            </value>
            <value>
                <fullName>Email/Case Comments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Video/Phone Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>