unpackaged/main/default/objects/Case/fields/CommunityAccessed__c.field-meta.xml
<CustomField>
    <fullName>CommunityAccessed__c</fullName>
    <formula>ContactId = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Accessed</label>
    <type>Checkbox</type>
</CustomField>