unpackaged/main/default/objects/Case/fields/Console_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Console_Case_Link__c</fullName>
    <formula>HYPERLINK(&#39;https://brightcove2.lightning.force.com/lightning/r/Case/&#39;+ Id+&#39;/view&#39;,  CaseNumber  , &quot;_parent&quot;)</formula>
    <label>Console Case Link</label>
    <type>Text</type>
</CustomField>