unpackaged/main/default/objects/Case/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <formula>ContactId = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId</label>
    <type>Checkbox</type>
</CustomField>