unpackaged/main/default/objects/Case/fields/CreateDate_Match_LegacyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate_Match_LegacyCreatedDate__c</fullName>
    <formula>CreatedDate = legacy_CreatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDate Match LegacyCreatedDate</label>
    <type>Checkbox</type>
</CustomField>