unpackaged/main/default/objects/Case/fields/CreateDateAMPM__c.field-meta.xml
<CustomField>
    <fullName>CreateDateAMPM__c</fullName>
    <description>It tell Time in GMT AM PM when the case has been created</description>
    <formula>VALUE(MID(TEXT(  CreatedDate  ),12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDateAMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>