unpackaged/main/default/objects/Case/fields/CS_Escalation_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Escalation_Owner__c</fullName>
    <label>CS Escalation Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>