unpackaged/main/default/objects/Case/fields/CS_Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Escalation_Status__c</fullName>
    <label>CS Escalation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>