unpackaged/main/default/objects/Case/fields/CS_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>CS_Status_Code__c</fullName>
    <label>CS Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>