unpackaged/main/default/objects/Case/fields/Date_Time_Escalated_T2_Prod__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Escalated_T2_Prod__c</fullName>
    <label>Date/Time Escalated T2 Prod</label>
    <type>DateTime</type>
</CustomField>